# rusty-fang

./: .gitignore  Cargo.toml  build.rs
grammar/: grammar.js  index.js  log.html  package-lock.json  package.json
grammar/corpus/: expressions.txt
grammar/src/: binding.cc  grammar.json  node-types.json  parser.c
grammar/test/: app.fns  incorrect-numbers.fns  infix.fns  lambdas.fns  lets.fns  prefix.fns
src/: builtin.rs  interp.rs  main.rs  parser.rs  tast.rs  ty.rs
test/: error.fns  fib.fns
tree-sitter-fang/: binding.gyp  grammar.js
tree-sitter-fang/corpus/: expressions.txt
tree-sitter-fang/src/: grammar.json  node-types.json  parser.c
