[package]
name = "fang"
version = "0.1.0"
authors = ["Artem Pyanykh <artem.pyanykh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.29"
clap = "2.33.1"
rpds = "0.7.0"
indented = "0.1.0"
once_cell = "1.3.1"
tree-sitter = "0.6.3"
pretty_assertions = "0.6.1"

[build-dependencies]
cc = "1.0"